# LibFFourier

./: CMakeLists.txt  README.md
include/: CNumber.h  FTransformer1D.h  FTransformer2D.h  FTransformer3D.h  Parallel.h
src/: CNumber.cpp  FTransformer1D.cpp  FTransformer2D.cpp  FTransformer3D.cpp  Parallel.cpp  test_FTransformer1D.cpp  test_FTransformer2D.cpp  test_FTransformer3D.cpp
test/: test_FTransformer1D.cpp  test_FTransformer2D.cpp  test_FTransformer3D.cpp
